<resources>
    <string name="app_name">Jus-Talk</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="welcome_to_jus_talk">Welcome to Jus-Talk</string>
    <string name="your_email">Your Email</string>

    <string name="your_password">Your Password</string>
    <string name="login">LOGIN</string>
    <string name="login_to_your_account">Login to your Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">Change Image</string>
    <string name="default_name">DISPLAY NAME</string>
    <string name="default_status">Hi there! I am using Jus-Talk</string>
    <string name="change_status">Change Status</string>

</resources>