<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="382dp"
        android:textColor="#ffffff"
        android:text="@string/welcome_to_jus_talk"
        android:textSize="30sp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="185dp"
        android:background="#ffffff"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="268dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="259dp"
        android:background="#ED1506"
        android:textColor="#ffffff"
        android:text="@string/already_have_account" />
</RelativeLayout>