<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="107dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/avatar_default" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="103dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="413dp"
        android:text="@string/default_name"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="366dp"
        android:gravity="center"
        android:text="@string/default_status"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="153dp"
        android:background="#ffffff"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="78dp"
        android:background="#ED1909"
        android:text="@string/change_status"
        android:textColor="#ffffff" />

</RelativeLayout>