<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/reg_create_account"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="Create a New Account"
        android:textColor="#111111"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_display_name"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="116dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:hint="@string/display_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="116dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="116dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="#F41B0B"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="528dp" />


</LinearLayout>