<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_account"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="Login to your account"
        android:textColor="#111111"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="116dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:hint="@string/your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="411dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="364dp"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="528dp" />

</LinearLayout>